# harness_kit

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  config.yaml  config_live.yaml  pyproject.toml
docs/: config.md  conversation_flow.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/wiki/: index.md  log.md
docs/wiki/.obsidian/: graph.json  workspace.json
examples/: multi_user.py  single_turn.py  ws_client.py
src/agent_kit/: __init__.py  errors.py  llm.py  metrics.py  retry.py  service.py  telemetry.py  util.py
src/agent_kit/agent/: __init__.py  budgeter.py  context.py  events.py  loop.py
src/agent_kit/config/: __init__.py  loader.py  schema.py
src/agent_kit/jobs/: __init__.py  __main__.py  _base.py  dedup.py  resummarize.py
src/agent_kit/memory/: __init__.py  (+3 more)
src/harness_kit/: __init__.py  errors.py  llm.py  metrics.py  retry.py  service.py  telemetry.py  tokens.py
tests/: conftest.py  test_agent_loop.py  test_background_logging.py  test_bounded_lru.py  test_context.py  test_context_with_skills.py  test_conversations.py  test_mcp.py  test_memory_retry.py  test_memory_writes.py  test_metrics.py  test_permissions.py  test_retry.py  test_serving.py  test_set_model.py  test_skill_manager.py  test_skill_store.py  test_skill_tool.py  test_skills_loader.py  test_stores.py  test_stores_real.py  test_telemetry.py  test_tool_policy.py
tests/integration/: conftest.py  test_episodic_memory.py  test_factual_extraction.py  test_native_memory_tools.py  test_skills.py  test_streaming.py  test_tool_roundtrip.py  test_working_memory.py
(+111 files in other folders)
