[project]
name = "agent-kit"
version = "0.1.0"
description = "Stateful, multi-turn agentic chatbot service built on top of llm_kit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm-kit",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
redis = ["redis"]
sqlite = ["sqlalchemy", "aiosqlite"]
qdrant = ["qdrant-client"]
mcp = ["mcp"]
telemetry = ["langfuse"]
metrics = ["prometheus-client"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.uv.sources]
llm-kit = { git = "https://github.com/sharma-n/llm_kit.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
